parser/src/sysy.output
Terminals unused in grammar

    TOKEN_string_constant
    TOKEN_eof
    TOKEN_error


Grammar

    0 $accept: Program $end

    1 Program: CompUnit

    2 CompUnit: CompUnit Decl
    3         | CompUnit FuncDef
    4         | Decl
    5         | FuncDef

    6 Decl: ConstDecl
    7     | VarDecl

    8 ConstDecl: TOKEN_const TOKEN_int ConstDefList TOKEN_semi

    9 ConstDefList: ConstDef
   10             | ConstDefList TOKEN_comma ConstDef

   11 ConstDef: TOKEN_identifier Array TOKEN_equal ConstInitVal

   12 Array: Array TOKEN_l_square ConstExp TOKEN_r_square
   13      | %empty

   14 ConstInitVal: ConstExp
   15             | TOKEN_l_brace ConstInitValList TOKEN_r_brace

   16 ConstInitValList: ConstInitVal
   17                 | ConstInitValList TOKEN_comma ConstInitVal
   18                 | %empty

   19 VarDecl: TOKEN_int VarDefList TOKEN_semi

   20 VarDefList: VarDef
   21           | VarDefList TOKEN_comma VarDef

   22 VarDef: TOKEN_identifier Array
   23       | TOKEN_identifier Array TOKEN_equal InitVal

   24 InitVal: Exp
   25        | TOKEN_l_brace InitValList TOKEN_r_brace

   26 InitValList: InitVal
   27            | InitValList TOKEN_comma InitVal
   28            | %empty

   29 FuncDef: TOKEN_void TOKEN_identifier TOKEN_l_paren FuncFParams TOKEN_r_paren Block
   30        | TOKEN_int TOKEN_identifier TOKEN_l_paren FuncFParams TOKEN_r_paren Block

   31 FuncFParams: FuncFParam
   32            | FuncFParams TOKEN_comma FuncFParam
   33            | %empty

   34 FuncFParam: TOKEN_int TOKEN_identifier
   35           | TOKEN_int TOKEN_identifier TOKEN_l_square TOKEN_r_square DynArray

   36 DynArray: DynArray TOKEN_l_square Exp TOKEN_r_square
   37         | %empty

   38 Block: TOKEN_l_brace BlockItemList TOKEN_r_brace

   39 BlockItemList: BlockItemList BlockItem
   40              | %empty

   41 BlockItem: Decl
   42          | Stmt

   43 Stmt: MatchedStmt
   44     | OpenStmt

   45 MatchedStmt: TOKEN_if TOKEN_l_paren Cond TOKEN_r_paren MatchedStmt TOKEN_else MatchedStmt
   46            | LVal TOKEN_equal Exp TOKEN_semi
   47            | Exp TOKEN_semi
   48            | TOKEN_semi
   49            | Block
   50            | TOKEN_while TOKEN_l_paren Cond TOKEN_r_paren MatchedStmt
   51            | TOKEN_break TOKEN_semi
   52            | TOKEN_continue TOKEN_semi
   53            | TOKEN_return Exp TOKEN_semi
   54            | TOKEN_return TOKEN_semi

   55 OpenStmt: TOKEN_if TOKEN_l_paren Cond TOKEN_r_paren Stmt
   56         | TOKEN_if TOKEN_l_paren Cond TOKEN_r_paren MatchedStmt TOKEN_else OpenStmt
   57         | TOKEN_while TOKEN_l_paren Cond TOKEN_r_paren OpenStmt

   58 Exp: Exp TOKEN_plus Exp
   59    | Exp TOKEN_minus Exp
   60    | Exp TOKEN_star Exp
   61    | Exp TOKEN_slash Exp
   62    | Exp TOKEN_percent Exp
   63    | TOKEN_plus Exp
   64    | TOKEN_minus Exp
   65    | TOKEN_l_paren Exp TOKEN_r_paren
   66    | LVal
   67    | TOKEN_identifier TOKEN_l_paren FuncRParams TOKEN_r_paren
   68    | Number

   69 FuncRParams: ExpList

   70 ExpList: Exp
   71        | ExpList TOKEN_comma Exp
   72        | %empty

   73 LVal: TOKEN_identifier DynArray

   74 Cond: Exp TOKEN_equalequal Exp
   75     | Exp TOKEN_exclaimequal Exp
   76     | Exp TOKEN_less Exp
   77     | Exp TOKEN_greater Exp
   78     | Exp TOKEN_lessequal Exp
   79     | Exp TOKEN_greaterequal Exp
   80     | TOKEN_l_paren Cond TOKEN_r_paren
   81     | TOKEN_exclaim Cond
   82     | Cond TOKEN_ampamp Cond
   83     | Cond TOKEN_pipepipe Cond

   84 ConstExp: ConstExp TOKEN_plus ConstExp
   85         | ConstExp TOKEN_minus ConstExp
   86         | ConstExp TOKEN_star ConstExp
   87         | ConstExp TOKEN_slash ConstExp
   88         | ConstExp TOKEN_percent ConstExp
   89         | TOKEN_plus ConstExp
   90         | TOKEN_minus ConstExp
   91         | TOKEN_l_paren ConstExp TOKEN_r_paren
   92         | Number

   93 Number: TOKEN_numeric_constant


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TOKEN_identifier <raw_symbol> (258) 11 22 23 29 30 34 35 67 73
    TOKEN_numeric_constant <raw_int> (259) 93
    TOKEN_string_constant <raw_str> (260)
    TOKEN_const (261) 8
    TOKEN_int (262) 8 19 30 34 35
    TOKEN_void (263) 29
    TOKEN_if (264) 45 55 56
    TOKEN_else (265) 45 56
    TOKEN_while (266) 50 57
    TOKEN_break (267) 51
    TOKEN_continue (268) 52
    TOKEN_return (269) 53 54
    TOKEN_comma (270) 10 17 21 27 32 71
    TOKEN_semi (271) 8 19 46 47 48 51 52 53 54
    TOKEN_l_brace (272) 15 25 38
    TOKEN_l_paren (273) 29 30 45 50 55 56 57 65 67 80 91
    TOKEN_l_square (274) 12 35 36
    TOKEN_r_brace (275) 15 25 38
    TOKEN_r_paren (276) 29 30 45 50 55 56 57 65 67 80 91
    TOKEN_r_square (277) 12 35 36
    TOKEN_equal (278) 11 23 46
    TOKEN_exclaim (279) 81
    TOKEN_ampamp (280) 82
    TOKEN_pipepipe (281) 83
    TOKEN_equalequal (282) 74
    TOKEN_exclaimequal (283) 75
    TOKEN_less (284) 76
    TOKEN_greater (285) 77
    TOKEN_lessequal (286) 78
    TOKEN_greaterequal (287) 79
    TOKEN_plus (288) 58 63 84 89
    TOKEN_minus (289) 59 64 85 90
    TOKEN_star (290) 60 86
    TOKEN_slash (291) 61 87
    TOKEN_percent (292) 62 88
    TOKEN_eof (293)
    TOKEN_error (294)


Nonterminals, with rules where they appear

    $accept (40)
        on left: 0
    Program (41)
        on left: 1
        on right: 0
    CompUnit <PtrCompUnit> (42)
        on left: 2 3 4 5
        on right: 1 2 3
    Decl <PtrDecl> (43)
        on left: 6 7
        on right: 2 4 41
    ConstDecl <PtrConstDecl> (44)
        on left: 8
        on right: 6
    ConstDefList <PtrConstDefList> (45)
        on left: 9 10
        on right: 8 10
    ConstDef <PtrConstDef> (46)
        on left: 11
        on right: 9 10
    Array <PtrArray> (47)
        on left: 12 13
        on right: 11 12 22 23
    ConstInitVal <PtrConstInitVal> (48)
        on left: 14 15
        on right: 11 16 17
    ConstInitValList <PtrConstInitValList> (49)
        on left: 16 17 18
        on right: 15 17
    VarDecl <PtrVarDecl> (50)
        on left: 19
        on right: 7
    VarDefList <PtrVarDefList> (51)
        on left: 20 21
        on right: 19 21
    VarDef <PtrVarDef> (52)
        on left: 22 23
        on right: 20 21
    InitVal <PtrInitVal> (53)
        on left: 24 25
        on right: 23 26 27
    InitValList <PtrInitValList> (54)
        on left: 26 27 28
        on right: 25 27
    FuncDef <PtrFuncDef> (55)
        on left: 29 30
        on right: 3 5
    FuncFParams <PtrFuncFParams> (56)
        on left: 31 32 33
        on right: 29 30 32
    FuncFParam <PtrFuncFParam> (57)
        on left: 34 35
        on right: 31 32
    DynArray <PtrDynArray> (58)
        on left: 36 37
        on right: 35 36 73
    Block <PtrBlock> (59)
        on left: 38
        on right: 29 30 49
    BlockItemList <PtrBlockItemList> (60)
        on left: 39 40
        on right: 38 39
    BlockItem <PtrBlockItem> (61)
        on left: 41 42
        on right: 39
    Stmt <PtrStmt> (62)
        on left: 43 44
        on right: 42 55
    MatchedStmt <PtrStmt> (63)
        on left: 45 46 47 48 49 50 51 52 53 54
        on right: 43 45 50 56
    OpenStmt <PtrStmt> (64)
        on left: 55 56 57
        on right: 44 56 57
    Exp <PtrExp> (65)
        on left: 58 59 60 61 62 63 64 65 66 67 68
        on right: 24 36 46 47 53 58 59 60 61 62 63 64 65 70 71 74 75 76 77 78 79
    FuncRParams <PtrFuncRParams> (66)
        on left: 69
        on right: 67
    ExpList <PtrExpList> (67)
        on left: 70 71 72
        on right: 69 71
    LVal <PtrLVal> (68)
        on left: 73
        on right: 46 66
    Cond <PtrCond> (69)
        on left: 74 75 76 77 78 79 80 81 82 83
        on right: 45 50 55 56 57 80 81 82 83
    ConstExp <PtrConstExp> (70)
        on left: 84 85 86 87 88 89 90 91 92
        on right: 12 14 84 85 86 87 88 89 90 91
    Number <PtrNumber> (71)
        on left: 93
        on right: 68 92


State 0

    0 $accept: . Program $end

    TOKEN_const  shift, and go to state 1
    TOKEN_int    shift, and go to state 2
    TOKEN_void   shift, and go to state 3

    Program    go to state 4
    CompUnit   go to state 5
    Decl       go to state 6
    ConstDecl  go to state 7
    VarDecl    go to state 8
    FuncDef    go to state 9


State 1

    8 ConstDecl: TOKEN_const . TOKEN_int ConstDefList TOKEN_semi

    TOKEN_int  shift, and go to state 10


State 2

   19 VarDecl: TOKEN_int . VarDefList TOKEN_semi
   30 FuncDef: TOKEN_int . TOKEN_identifier TOKEN_l_paren FuncFParams TOKEN_r_paren Block

    TOKEN_identifier  shift, and go to state 11

    VarDefList  go to state 12
    VarDef      go to state 13


State 3

   29 FuncDef: TOKEN_void . TOKEN_identifier TOKEN_l_paren FuncFParams TOKEN_r_paren Block

    TOKEN_identifier  shift, and go to state 14


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 15


State 5

    1 Program: CompUnit .
    2 CompUnit: CompUnit . Decl
    3         | CompUnit . FuncDef

    TOKEN_const  shift, and go to state 1
    TOKEN_int    shift, and go to state 2
    TOKEN_void   shift, and go to state 3

    $default  reduce using rule 1 (Program)

    Decl       go to state 16
    ConstDecl  go to state 7
    VarDecl    go to state 8
    FuncDef    go to state 17


State 6

    4 CompUnit: Decl .

    $default  reduce using rule 4 (CompUnit)


State 7

    6 Decl: ConstDecl .

    $default  reduce using rule 6 (Decl)


State 8

    7 Decl: VarDecl .

    $default  reduce using rule 7 (Decl)


State 9

    5 CompUnit: FuncDef .

    $default  reduce using rule 5 (CompUnit)


State 10

    8 ConstDecl: TOKEN_const TOKEN_int . ConstDefList TOKEN_semi

    TOKEN_identifier  shift, and go to state 18

    ConstDefList  go to state 19
    ConstDef      go to state 20


State 11

   22 VarDef: TOKEN_identifier . Array
   23       | TOKEN_identifier . Array TOKEN_equal InitVal
   30 FuncDef: TOKEN_int TOKEN_identifier . TOKEN_l_paren FuncFParams TOKEN_r_paren Block

    TOKEN_l_paren  shift, and go to state 21

    $default  reduce using rule 13 (Array)

    Array  go to state 22


State 12

   19 VarDecl: TOKEN_int VarDefList . TOKEN_semi
   21 VarDefList: VarDefList . TOKEN_comma VarDef

    TOKEN_comma  shift, and go to state 23
    TOKEN_semi   shift, and go to state 24


State 13

   20 VarDefList: VarDef .

    $default  reduce using rule 20 (VarDefList)


State 14

   29 FuncDef: TOKEN_void TOKEN_identifier . TOKEN_l_paren FuncFParams TOKEN_r_paren Block

    TOKEN_l_paren  shift, and go to state 25


State 15

    0 $accept: Program $end .

    $default  accept


State 16

    2 CompUnit: CompUnit Decl .

    $default  reduce using rule 2 (CompUnit)


State 17

    3 CompUnit: CompUnit FuncDef .

    $default  reduce using rule 3 (CompUnit)


State 18

   11 ConstDef: TOKEN_identifier . Array TOKEN_equal ConstInitVal

    $default  reduce using rule 13 (Array)

    Array  go to state 26


State 19

    8 ConstDecl: TOKEN_const TOKEN_int ConstDefList . TOKEN_semi
   10 ConstDefList: ConstDefList . TOKEN_comma ConstDef

    TOKEN_comma  shift, and go to state 27
    TOKEN_semi   shift, and go to state 28


State 20

    9 ConstDefList: ConstDef .

    $default  reduce using rule 9 (ConstDefList)


State 21

   30 FuncDef: TOKEN_int TOKEN_identifier TOKEN_l_paren . FuncFParams TOKEN_r_paren Block

    TOKEN_int  shift, and go to state 29

    $default  reduce using rule 33 (FuncFParams)

    FuncFParams  go to state 30
    FuncFParam   go to state 31


State 22

   12 Array: Array . TOKEN_l_square ConstExp TOKEN_r_square
   22 VarDef: TOKEN_identifier Array .
   23       | TOKEN_identifier Array . TOKEN_equal InitVal

    TOKEN_l_square  shift, and go to state 32
    TOKEN_equal     shift, and go to state 33

    $default  reduce using rule 22 (VarDef)


State 23

   21 VarDefList: VarDefList TOKEN_comma . VarDef

    TOKEN_identifier  shift, and go to state 34

    VarDef  go to state 35


State 24

   19 VarDecl: TOKEN_int VarDefList TOKEN_semi .

    $default  reduce using rule 19 (VarDecl)


State 25

   29 FuncDef: TOKEN_void TOKEN_identifier TOKEN_l_paren . FuncFParams TOKEN_r_paren Block

    TOKEN_int  shift, and go to state 29

    $default  reduce using rule 33 (FuncFParams)

    FuncFParams  go to state 36
    FuncFParam   go to state 31


State 26

   11 ConstDef: TOKEN_identifier Array . TOKEN_equal ConstInitVal
   12 Array: Array . TOKEN_l_square ConstExp TOKEN_r_square

    TOKEN_l_square  shift, and go to state 32
    TOKEN_equal     shift, and go to state 37


State 27

   10 ConstDefList: ConstDefList TOKEN_comma . ConstDef

    TOKEN_identifier  shift, and go to state 18

    ConstDef  go to state 38


State 28

    8 ConstDecl: TOKEN_const TOKEN_int ConstDefList TOKEN_semi .

    $default  reduce using rule 8 (ConstDecl)


State 29

   34 FuncFParam: TOKEN_int . TOKEN_identifier
   35           | TOKEN_int . TOKEN_identifier TOKEN_l_square TOKEN_r_square DynArray

    TOKEN_identifier  shift, and go to state 39


State 30

   30 FuncDef: TOKEN_int TOKEN_identifier TOKEN_l_paren FuncFParams . TOKEN_r_paren Block
   32 FuncFParams: FuncFParams . TOKEN_comma FuncFParam

    TOKEN_comma    shift, and go to state 40
    TOKEN_r_paren  shift, and go to state 41


State 31

   31 FuncFParams: FuncFParam .

    $default  reduce using rule 31 (FuncFParams)


State 32

   12 Array: Array TOKEN_l_square . ConstExp TOKEN_r_square

    TOKEN_numeric_constant  shift, and go to state 42
    TOKEN_l_paren           shift, and go to state 43
    TOKEN_plus              shift, and go to state 44
    TOKEN_minus             shift, and go to state 45

    ConstExp  go to state 46
    Number    go to state 47


State 33

   23 VarDef: TOKEN_identifier Array TOKEN_equal . InitVal

    TOKEN_identifier        shift, and go to state 48
    TOKEN_numeric_constant  shift, and go to state 42
    TOKEN_l_brace           shift, and go to state 49
    TOKEN_l_paren           shift, and go to state 50
    TOKEN_plus              shift, and go to state 51
    TOKEN_minus             shift, and go to state 52

    InitVal  go to state 53
    Exp      go to state 54
    LVal     go to state 55
    Number   go to state 56


State 34

   22 VarDef: TOKEN_identifier . Array
   23       | TOKEN_identifier . Array TOKEN_equal InitVal

    $default  reduce using rule 13 (Array)

    Array  go to state 22


State 35

   21 VarDefList: VarDefList TOKEN_comma VarDef .

    $default  reduce using rule 21 (VarDefList)


State 36

   29 FuncDef: TOKEN_void TOKEN_identifier TOKEN_l_paren FuncFParams . TOKEN_r_paren Block
   32 FuncFParams: FuncFParams . TOKEN_comma FuncFParam

    TOKEN_comma    shift, and go to state 40
    TOKEN_r_paren  shift, and go to state 57


State 37

   11 ConstDef: TOKEN_identifier Array TOKEN_equal . ConstInitVal

    TOKEN_numeric_constant  shift, and go to state 42
    TOKEN_l_brace           shift, and go to state 58
    TOKEN_l_paren           shift, and go to state 43
    TOKEN_plus              shift, and go to state 44
    TOKEN_minus             shift, and go to state 45

    ConstInitVal  go to state 59
    ConstExp      go to state 60
    Number        go to state 47


State 38

   10 ConstDefList: ConstDefList TOKEN_comma ConstDef .

    $default  reduce using rule 10 (ConstDefList)


State 39

   34 FuncFParam: TOKEN_int TOKEN_identifier .
   35           | TOKEN_int TOKEN_identifier . TOKEN_l_square TOKEN_r_square DynArray

    TOKEN_l_square  shift, and go to state 61

    $default  reduce using rule 34 (FuncFParam)


State 40

   32 FuncFParams: FuncFParams TOKEN_comma . FuncFParam

    TOKEN_int  shift, and go to state 29

    FuncFParam  go to state 62


State 41

   30 FuncDef: TOKEN_int TOKEN_identifier TOKEN_l_paren FuncFParams TOKEN_r_paren . Block

    TOKEN_l_brace  shift, and go to state 63

    Block  go to state 64


State 42

   93 Number: TOKEN_numeric_constant .

    $default  reduce using rule 93 (Number)


State 43

   91 ConstExp: TOKEN_l_paren . ConstExp TOKEN_r_paren

    TOKEN_numeric_constant  shift, and go to state 42
    TOKEN_l_paren           shift, and go to state 43
    TOKEN_plus              shift, and go to state 44
    TOKEN_minus             shift, and go to state 45

    ConstExp  go to state 65
    Number    go to state 47


State 44

   89 ConstExp: TOKEN_plus . ConstExp

    TOKEN_numeric_constant  shift, and go to state 42
    TOKEN_l_paren           shift, and go to state 43
    TOKEN_plus              shift, and go to state 44
    TOKEN_minus             shift, and go to state 45
